[gd_scene load_steps=47 format=2]

[ext_resource path="res://Assets/Zombies/HeadDragZombie-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Zombies/PoleVaultZombie.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/ZombieAttack.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/ZombieHit.mp3" type="AudioStream" id=4]
[ext_resource path="res://Scenes/ZombieScenes/AttackComponent.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/ZombieScenes/HealthComponent.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/ZombieScenes/SpeedComponent.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/ZombieScenes/ComponentManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Zombies/HeadDragZombieAttack-Sheet.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Zombies/ZombieSpriteComponent.gd" type="Script" id=10]
[ext_resource path="res://Assets/Shaders/basicZombieHitShader.tres" type="Shader" id=11]
[ext_resource path="res://Scripts/Zombies/VaultSpecialMoveComp.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="ShaderMaterial" id=44]
shader = ExtResource( 11 )
shader_param/target_color = null
shader_param/replace_color = null
shader_param/tolerance = null

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 9 )
region = Rect2( 62, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 9 )
region = Rect2( 124, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 9 )
region = Rect2( 186, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 9 )
region = Rect2( 248, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 9 )
region = Rect2( 310, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 9 )
region = Rect2( 372, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 558, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 620, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 682, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 744, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 806, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 868, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 930, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 992, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 1054, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 1116, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 1178, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 1240, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 1302, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 1364, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 1426, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 1 )
region = Rect2( 62, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 124, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 1 )
region = Rect2( 186, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 1 )
region = Rect2( 248, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 1 )
region = Rect2( 310, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 1 )
region = Rect2( 372, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 1 )
region = Rect2( 434, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 1 )
region = Rect2( 496, 0, 62, 33 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "Vault",
"speed": 5.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[node name="PoleVaultZombie" type="Area2D" groups=["Zombie"]]
z_index = 1
collision_layer = 2
script = ExtResource( 2 )

[node name="ComponentManager" parent="." instance=ExtResource( 8 )]

[node name="HealthComponent" parent="." instance=ExtResource( 6 )]

[node name="SpeedComponent" parent="." instance=ExtResource( 7 )]

[node name="AttackComponent" parent="." instance=ExtResource( 5 )]

[node name="HurtBoxComponent" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 44 )
position = Vector2( 0, -2 )
scale = Vector2( 1.7, 1.7 )
frames = SubResource( 9 )
animation = "Walk"
frame = 2
playing = true
flip_h = true
script = ExtResource( 10 )

[node name="DMGRayCast2D" type="RayCast2D" parent="." groups=["Zombie"]]
enabled = true
cast_to = Vector2( -34, 0 )
collide_with_areas = true

[node name="AttackTimer" type="Timer" parent="."]

[node name="HitAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="AttackAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -16.0

[node name="SpecialMoveComp" type="Node2D" parent="."]
script = ExtResource( 12 )

[connection signal="animation_finished" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="AttackComponent" method="_on_AttackTimer_timeout"]
